<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/Profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/Category" />
        <item
            android:id="@+id/my_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/my_cart" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_cart_1"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_new_products"
            android:icon="@drawable/ic_my_products"
            android:title="@string/new_products" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_offers"
            android:title="@string/offers" />



    </group>



</menu>
